# prepackaged_datasets_dte

./: .gitignore  AGENTS.md  Prepackaged deadtrees.earth .md  pyproject.toml
deadtrees_prepackaged/: __init__.py  cli.py  config.py  result.py  runner.py
deadtrees_prepackaged/datasets/: __init__.py  base.py  image_tiles_1024_global_aerial_sampled_20_random.py  standing_deadwood_aerial_global_conservative.py  standing_deadwood_drone_global.py  standing_deadwood_drone_global_conservative.py  tree_cover_aerial_global.py  tree_cover_drone_global.py
deadtrees_prepackaged/helpers/: geometry.py  geopackage.py  labels.py  license.py  manifest.py  metadata.py  orthophotos.py  phenology.py  tiles.py
deadtrees_prepackaged/postgres/: __init__.py  client.py  filters.py  queries.py
deadtrees_prepackaged/supabase/: __init__.py  client.py  queries.py
tests/: test_deadwood_phenology.py  test_license.py  test_manifest.py  test_metadata.py  test_postgres_client.py  test_postgres_filters.py  test_tree_cover_build.py
